--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cv_aplication",
+  "homepage": "http://darioprazeres.github.io/memory_card",		
+  "name": "memory_card",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "homepage": "http://darioprazeres.github.io/CV_App",
+    "bootstrap": "^5.1.3",    
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
